SXCSP-85: Add default policies table in UI

--- a/csp-apps/integration-layer/il-server/src/main/resources/i18n/messages.properties
+++ b/csp-apps/integration-layer/il-server/src/main/resources/i18n/messages.properties
@@ -1,2 +1,4 @@
 home.title = Sharing Policy Manager
 welcome.message = Welcome to Sharing Policy Management
+default.policies = Default Policies
+saved.policies = Saved Policies
