--- a/csp-apps/integration-layer/il-server/src/main/resources/i18n/messages.properties
+++ b/csp-apps/integration-layer/il-server/src/main/resources/i18n/messages.properties
@@ -1,4 +1,4 @@
 home.title = Sharing Policy Manager
 welcome.message = Welcome to Sharing Policy Management
-default.policies = Default Policies
-saved.policies = Saved Policies
+save.policy = Save Policy
+stored.policies = Stored Policies
