--- a/csp-apps/integration-layer/il-integration-tests/README
+++ b/csp-apps/integration-layer/il-integration-tests/README
@@ -22,3 +22,18 @@ APPENDIX
 Sample with docker profile and env vars
 
 java -jar -Dspring.profiles.active=docker -DES_PATH_BASE=/pathbse -DES_PORT=9000 -DES_LOCAL_DOMAIN=es.local -DIL_SSL_KEYSTORE_PASS=123456 -DIL_SSL_KEY_PASS=12345 -DIL_CSP_SUBDOMAIN_PREFIX=pref -DTC_PATH_TEAMS=/teams  -DTC_PATH_CIRCLES=/circles -DCSP_NAME -DTC_LOCAL_DOMAIN=tc.local  integration-tests-0.2.0-SNAPSHOT.jar com.intrasoft.csp.integration.business.server.internal.CspServerInternalBusinessTcTest
+
+
+USEFUL CURLs
+------------
+
+For alpine distros:
+apk --no-cache add curl
+
+curl -v -s -k --key /opt/ssl/server/csp-internal.key --cert /opt/ssl/server/csp-internal.crt -H "Content-Type: application/json" -X POST -d @data.json https://integration.local.demo1-csp.athens.intrasoft-intl.private/v1/dsl/integrationData
+
+curl -v -s -k --key /opt/ssl/server/csp-internal.key --cert /opt/ssl/server/csp-internal.crt https://anon.local.demo1-cs
+p.athens.intrasoft-intl.private/apiversion
+
+curl -v -s -k --key /opt/ssl/server/csp-internal.key --cert /opt/ssl/server/csp-internal.crt https://anon.local.demo1-cs
+p.athens.intrasoft-intl.private/v1/ruleset/getAll
