property for organisation certificate field

--- a/csp-apps/oam/openam-auth-cert2/src/main/resources/amAuthCert2_de.properties
+++ b/csp-apps/oam/openam-auth-cert2/src/main/resources/amAuthCert2_de.properties
@@ -73,6 +73,10 @@ a501.help.txt=Der Modul Certificate2 pr\u00fcft, ob der Organisationsname gewonn
 mit dem hier spezifizierten Wert \u00fcbereinstimmt. \
 (z.B. DN=(CN=user1, O=tku.csp.com, L=Berlin, ST=Berlin, C=DE) und der Organisationsname tku.csp.com \
 w\u00fcrden zu einem positiven Verifikationsergebnis f\u00fchren)  
+a5011=Zertifikatsfeld, das beinhaltet den Organisationsname
+a5011.help=Der Modul Certificate2 liest den Organisationsnamen aus dem Benutzerzertifikat heraus.  
+a5011.help.txt=Der aus dem Benutzerzertifikat gelesenen Organisationsnamen wird mit dem im Modul definierten Namen vergliechen. \
+Nur Benutzer, die der vorgegebenen Organisation angeh\u00f6ren, k\u00f6nnen authentifiziert werden.
 amAuthCert-eeh-debug-desc=Fehlerbehebung einschalten.
 amAuthCert-ff-aliases-desc=Aliasnamen f\u00fcr Zertifikatbenutzer
 amAuthCert-debug.on=Aktiviert
@@ -90,8 +94,10 @@ noLDAPAttr=Kein Wert f\u00fcr Attributnamen zum Durchsuchen von LDAP angegeben.
 noCRLAttr=Kein Wert f\u00fcr Attributnamen zum Durchsuchen von CRL angegeben.
 noOtherAttr=Kein Wert f\u00fcr anderes Feld f\u00fcr Zugriff auf Benutzerprofil.
 noURLCertAuth=URL-Zertifikatsauthentifizierung nicht aktiviert.
+
 noOrgName=Name der Organisation fehlt.
-orgaInvalid=Vorgelegtes Zertifikat geh\u00f6rt nicht zu der spezifizierten Organisation.
+orgNameInvalid=Vorgelegtes Zertifikat geh\u00f6rt nicht zu der spezifizierten Organisation.
+orgProfileMapperUnkown=Unbekannter Filedname f\u00fcr Organisationsname. 
 
 choiceNone=Keine
 choiceSimple=Einfach
@@ -104,6 +110,8 @@ choiceSubjectDN=subject DN
 choiceSubjectCN=subject CN
 choiceSubjectUID=subject UID
 choiceSubject0=subject O
+choiceSubjectO=subject O
+choiceSubjectOU=subject OU
 choiceEmail=E-Mail-Adresse
 choiceOther=weitere
 choiceRFC822Name=RFC822Name
