--- a/csp-apps/integration-layer/il-integration-tests/README
+++ b/csp-apps/integration-layer/il-integration-tests/README
@@ -38,6 +38,7 @@ apk --no-cache add curl
 curl -v -s -k --key /opt/ssl/server/csp-internal.key --cert /opt/ssl/server/csp-internal.crt -H "Content-Type: application/json" -X POST -d @data.json https://integration.local.demo1-csp.athens.intrasoft-intl.private/v1/dsl/integrationData
 
 curl -v -s -k --key /opt/ssl/server/csp-internal.key --cert /opt/ssl/server/csp-internal.crt https://anon.local.demo1-csp.athens.intrasoft-intl.private/apiversion
+curl -v -s -k --key /opt/ssl/server/csp-internal.key --cert /opt/ssl/server/csp-internal.crt https://integration.local.demo1-csp.athens.intrasoft-intl.private/apiversion
 
 curl -v -s -k --key /opt/ssl/server/csp-internal.key --cert /opt/ssl/server/csp-internal.crt https://anon.local.demo1-csp.athens.intrasoft-intl.private/v1/ruleset/getAll
 
